fixed z-index so nav bar is always visible

--- a/css/nav-bar.css
+++ b/css/nav-bar.css
@@ -7,6 +7,7 @@
     background-color: #333;
     top: 0;
     width: 100%;
+    z-index: 100
 }
 
 .topnav a {
